<resources>
    <string name="app_name">findhomeb</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="api_key">AIzaSyDkBbMU2HJ3FArzFL7wXDo-EvQFwdyF4IA</string>
    <string name="view">View</string>
    <string name="Save">Save</string>
    <string name="inbox">Inbox</string>
    <string name="profile">Profile</string>
    <string name="kin_of_facility">Hello, What Kind of facility do you have?</string>
    <string name="all">All</string>
    <string name="hostel">Hostel</string>
    <string name="home">Home</string>
    <string name="hotel">Hotel</string>
    <string name="next">Next</string>
    <string name="a_hostel">A Hostel</string>
    <string name="a_homestel">A Homestel</string>
    <string name="a_house">A House</string>
    <string name="a_hotel">A Hotel</string>
    <string name="an_apartment">An Apartment</string>
    <string name="home_type">Home Type:</string>
    <string name="home_prompt">Choose a home type</string>
    <string name="room_type">Room Type</string>
    <string name="shared">Shared</string>
    <string name="select_the_room_types_available_in_your">Select the Room Types Available in Your</string>
    <string name="select_the_room_types_available_in_your_hostel">Select The Room Types Available in Your Hostel</string>
    <string name="four_in_a_room">Four In A Room</string>
    <string name="three_in_a_room">Three In A Room</string>
    <string name="two_in_a_room">Two In A Room</string>
    <string name="one_in_a_room">One In A Room</string>
    <string name="when_will_your_place_be_available_for_booking">When Will Your Place Be Available For Booking?</string>
    <string name="description">Description</string>
    <string name="write_a_short_description_of_your_place">Write a short description of your Place</string>
    <string name="set_the_title_and_description_of_your_place">Set The Title and Description of your Place</string>
    <string name="write_a_title">Write A Title</string>
    <string name="add_a_photo">Add a Caption Photo</string>
    <string name="add_photo">Add Photo</string>
    <string name="make_a_great_first_impression">Make a Great First Impression</string>
    <string name="one_time">One Time</string>
    <string name="range">Range</string>
    <string name="always">Always</string>
    <string name="please_sign_up">Please Sign Up</string>
    <string name="manage_a_hostel_homestel_or_hotel">Manage a Hostel, Homestel, or Hotel</string>
    <string name="account">Account</string>
    <string name="bookings">Bookings</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="set_the_basic_information_about_your_place">Set The Basic Information About Your Place</string>
    <string name="bedrooms">BedRooms</string>
    <string name="bathrooms">BathRooms</string>
    <string name="kitchen">Kitchen </string>
    <string name="balcony">Balcony</string>
    <string name="set_the_general_price_for_your_place">Set The General Price For Your Place</string>
    <string name="amount">Amount</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="rental_peroid">Rental Peroid</string>
    <string name="set_the_default_price_for_your_hostel">Set The Default Price For Your Hostel</string>
    <string name="_4_in_a_room">4 in a Room</string>
    <string name="_3_in_a_room">3 In a Room</string>
    <string name="_2_in_a_room">2 In A Room</string>
    <string name="single_room">Single Room</string>
    <string name="price">Price</string>
    <string name="set_the_default_nighly_price_guests_will_see">Set The Default Nighly Price Guests will See</string>
    <string name="main_hall">Main Hall" "</string>
    <string name="per_night">Per Night</string>
    <string name="generator">Generator</string>
    <string name="tv_room">TV room</string>
    <string name="wifi">Wifi</string>
    <string name="airconditioning">Airconditioning</string>
    <string name="desk_workspace">Desk/Workspace</string>
    <string name="study_room">Study Room</string>
    <string name="cleaning_service">Cleaning Service</string>
    <string name="_24_hour_water_suply">24 hour Water Suply</string>
    <string name="shop">Shop</string>
    <string name="dstv">DSTV</string>
    <string name="shuttle_service">Shuttle Service</string>
    <string name="restuarant">Restuarant</string>
    <string name="basketball_court">BasketBall Court</string>
    <string name="snooker">Snooker</string>
    <string name="tenis_court">Tenis Court</string>
    <string name="gym">Gym</string>
    <string name="parking_space">Parking Space</string>
    <string name="disability_friendly">Disability Friendly</string>
    <string name="heating">Heating</string>
    <string name="swimming_pool">Swimming Pool</string>
    <string name="essentials_towels_be_sheets_toilet_papers_pillows">Essentials(towels,be sheets,toilet papers,pillows)</string>
    <string name="select_the_right_amenities_for_your_place">Select The Right Amenities for Your Place</string>
    <string name="cctv_camera">CCTV camera</string>
    <string name="fire_extinguisher">Fire Extinguisher</string>
    <string name="_24_hour_security">24 hour Security</string>
    <string name="first_aid_kit">First Aid Kit</string>
    <string name="fire_detector">Fire Detector</string>
    <string name="upload_up_to_a_maximum_of_10_photos_of_your_place_including_your_outdoor_environment_room_types_and_indoor_environment">Upload Up To A Maximum of 10 Photos of your Place Including Your OutDoor Environment,Room Types, and Indoor Environment</string>
    <string name="add_photos">ADD PHOTOS</string>
    <string name="add_pictures_of_your_place">Add Pictures of Your Place</string>
    <string name="locate_your_place_for_guests">Locate Your Place For Guests</string>
    <string name="optional">Optional</string>
    <string name="ghana_post_address">Ghana Post Address</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="finish">Finish</string>
    <string name="whoops">Whoops!</string>
    <string name="no_internet_connections_found_check_your_connection_or_try_again">No internet connections found.Check your connection or try again to continue</string>
    <string name="retry">RETRY</string>
    <string name="service_not_available">Service Not Available</string>
    <string name="invalid_lat_long_used">Invalid Lat Long Used</string>
    <string name="no_address_found">Address Not Found</string>
    <string name="address_found">Address Found</string>
    <string name="calender_title">Calender</string>
    <string name="done">Done</string>
    <string-array name="bed_rooms_arrays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="rental_peroid_arrays">
        <item>Per Month</item>
        <item>Per Year</item>
        <item>Per Night</item>
    </string-array>
    <string name="demo_mode_no_selection">Display only mode</string>
    <string name="demo_mode_single_selection">Single date selection</string>
    <string name="demo_mode_multiple_selection">Multiple dates selection </string>
    <string name="demo_mode_range_selection">Range dates selection</string>
    <string name="demo_mode_limited_selection">Limited dates selection</string>
    <string name="demo_mode_events">Custom events and action dialog</string>
    <string name="demo_mode_custom_style">Custom styles</string>
    <string name="demo_mode_dialog">Dialog</string>
    <string name="demo_mode_move_to_date">Move to today</string>
    <string name="choose_search_category">Choose Search Category</string>
    <string name="give_us_feedback">Give us feedback</string>
    <string name="lift_a_facility">Lift a Facility</string>
    <string name="explore">Explore</string>
    <string name="city">City</string>
    <string name="streed_address">Streed Address</string>
    <string name="search_country">Search country</string>
    <string name="search_city">Search City</string>
    <string name="search_address">Search address</string>
    <string name="search_location">Search location</string>
    <string name="locate">LOCATE</string>
    <string name="share_app">Share App</string>
    <string name="no_location_data_provided">No Locatino Available</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="place_details"> %1$s %2$s %3$s %4$s %5$s </string>
    <string name="loading">loading...</string>
    <string name="delete_image">Delete</string>
    <string name="img_delete_report">There exist an Image in the cloud. Delete existing Image to upload the new Image</string>
    <string name="img_upload_title">Image Upload</string>
    <string name="img_progress_report">Uploading image to cloud… %1$s</string>
    <string name="room_type_title">Uploading Data</string>
    <string name="roomtype_progress_report">Uploading data to cloud. Please wait</string>
    <string name="couldn_t_fetch_or_find_any_results">Couldn\'t Fetch or Find any Results</string>
    <string name="no_results">No Results</string>
    <string name="about">Description</string>
    <string name="amenities">Amenities</string>
    <string name="prices">Prices</string>
    <string name="review">Review</string>
    <string name="rate">Rate Facility</string>
    <string name="cancel">Cancel</string>
    <string name="rate_title">Rate This Facility</string>
    <string name="reviews">Reviews</string>
    <string name="similar_facility">Similar Facilities</string>
    <string name="edit">Edit</string>
    <string name="single_bed">Single Bed</string>
    <string name="female_dorm">Female Dorm</string>
    <string name="mixed_dorm">Mixed Dorm</string>
    <string name="four_beds">Four Beds</string>
    <string name="double_bed">Double Bed</string>
    <string name="male_dorm">Male Dorm</string>
    <string name="family_room">Family Room</string>
    <string name="three_beds">Three Beds</string>
    <string name="enter_price">Enter Price</string>
    <string name="upload">Upload</string>
    <string name="add_upload">Add/Upload</string>
    <string name="account_settings">Account Settings</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="how_would_you_like_to_start">How would you like to Start?</string>
    <string name="progress">Progress</string>
    <string name="continue_from_where_you_started">Would you like to continue ?</string>
    <string name="continue_">Continue</string>
    <string name="create_a_new_facility">Create a new facility?</string>
    <string name="start">Start</string>
    <string name="twin_single_size">Twin/Single Size</string>
    <string name="bed_sizes">Bed sizes</string>
    <string name="double_size">Double Size</string>
    <string name="queen_size">Queen Size</string>
    <string name="olympic_queen_size">Olympic Queen Size</string>
    <string name="california_queen_size">California Queen Size</string>
    <string name="king_size">King Size</string>
    <string name="california_king_size">California King size</string>
    <string name="super_king_size">Super King size</string>
    <string name="three_quarter_size">Three Quarter size</string>
    <string name="small_single_size">Small Single size</string>
    <string name="show_notifications">Show Notifications</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="currency">Currency</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="logout">Logout</string>
    <string name="about1">About</string>
    <string name="about_shelterfind">About ShelterFind</string>
</resources>