<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/notifications"
        android:textColor="@color/colorAccent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:paddingTop="10dp"
        >
        <Switch
            android:layout_width="fill_parent"
            android:layout_height="43dp"
            android:layout_marginStart="15dp"
            android:checked="true"
            android:gravity="start"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:text="@string/show_notifications"
            android:textOff="@string/off"
            android:textOn="@string/on"
            android:id="@+id/settings_show_notification"

            />
    </LinearLayout>





<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/settings_currency"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/currency"
        android:textColor="@color/colorAccent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="Currency"
        android:id="@+id/settings_currency_txt"

        />

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/settings_rate"
        android:paddingTop="15dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/rate_this_app"
            android:textColor="@color/colorAccent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="Tap to rate this app"
            android:id="@+id/settings_rate_txt"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/settings_logout"
        android:paddingTop="15dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/logout"
            android:textColor="@color/colorAccent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="Tap to logout"
            android:id="@+id/settings_logout_txt"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/about1"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/settings_about_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/about_shelterfind"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/settings_about_txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="Version: 1.0.0
First release: sep/2018
A simple app to help you find your next home" />

    </LinearLayout>


</LinearLayout>