<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appbg"
    tools:context=".GeneralRoomTypeFragment"
    tools:layout_editor_absoluteY="25dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/set_the_basic_information_about_your_place"
        android:textColor="@color/blacky"
        android:textSize="18sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />


    <ScrollView
        android:layout_width="0dip"
        android:layout_height="0dip"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="8dp"
            android:divider="@drawable/mydivider"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:showDividers="middle">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/bedrooms"
                    android:textColor="@color/blacky"
                    android:textSize="16sp" />


                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/bedroom_substract_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_substract"
                    app:backgroundTint="@color/white"
                    app:fabCustomSize="30dp" />

                <TextView
                    android:id="@+id/bedroom_count_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textColor="@color/black"
                    android:textSize="28sp" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/bedroom_add_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_add"
                    app:backgroundTint="@color/white" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/bathrooms"
                    android:textColor="@color/blacky"
                    android:textSize="16sp" />


                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/bathroom_substract_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_substract"
                    app:backgroundTint="@color/white"
                    app:fabCustomSize="30dp" />

                <TextView
                    android:id="@+id/bathroom_count_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textColor="@color/black"
                    android:textSize="28sp" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/bathroom_add_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_add"
                    app:backgroundTint="@color/white" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/balcony_switch"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:scrollbarSize="30dp"
                    android:text="@string/balcony"
                    android:textSize="16sp" />


            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/main_hall_switch"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/main_hall"
                    android:textSize="16sp"
                    tools:layout_editor_absoluteX="129dp"
                    tools:layout_editor_absoluteY="459dp" />

            </LinearLayout>





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textStyle="bold"

                    android:text="@string/bed_sizes"/>

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnWidth="150dp"
                    android:horizontalSpacing="15dp"
                    android:numColumns="auto_fit"
                    android:orientation="vertical"
                    android:verticalSpacing="15dp" >

                    <Switch
                        android:id="@+id/twinsize"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/twin_single_size"
                        android:textSize="14sp"
                        />

                    <Switch
                        android:layout_marginTop="5dp"
                        android:id="@+id/doublesize"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/double_size"
                        android:textSize="14sp" />

                        <Switch
                        android:layout_marginTop="5dp"
                        android:id="@+id/queensize"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/queen_size"
                        android:textSize="14sp" />

                        <Switch
                        android:layout_marginTop="5dp"
                        android:id="@+id/olympicqueensize"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/olympic_queen_size"
                        android:textSize="14sp" />

                        <Switch
                        android:layout_marginTop="5dp"
                        android:id="@+id/californiaqueensize"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/california_queen_size"
                        android:textSize="14sp" />

                        <Switch
                        android:layout_marginTop="5dp"
                        android:id="@+id/kingsize"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/king_size"
                        android:textSize="14sp" />

                        <Switch
                        android:layout_marginTop="5dp"
                        android:id="@+id/californiakingsize"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/california_king_size"
                        android:textSize="14sp" />

                         <Switch
                        android:layout_marginTop="5dp"
                        android:id="@+id/superkingsize"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/super_king_size"
                        android:textSize="14sp" />

                        <Switch
                        android:layout_marginTop="5dp"
                        android:id="@+id/threequartersize"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/three_quarter_size"
                        android:textSize="14sp" />
                        <Switch
                        android:layout_marginTop="5dp"
                        android:id="@+id/smallsinglesize"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/small_single_size"
                        android:textSize="14sp" />





                </GridLayout>




            </LinearLayout>





        </LinearLayout>


    </ScrollView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/button_next_generalroom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_arrow_forward"
        android:text="@string/next"
        android:tint="@color/white"
        app:backgroundTint="@color/colorAccent"
        app:fabSize="normal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:pressedTranslationZ="12dp"
        app:maxImageSize="35dp" />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:max="100"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

</android.support.constraint.ConstraintLayout>